src/examples/errors/03_undefined_function.veri
// Error: Calling undefined function
// Expected error: E003 - Cannot find function

fn main() -> int {
    foo(42)
}
